--- a/_posts/2016-09-04-story-01.markdown
+++ b/_posts/2016-09-04-story-01.markdown
@@ -4,5 +4,21 @@ title:  "讲给儿子的故事（一）"
 date:   2016-09-04 21:25:00 +0800
 categories: 故事
 ---
-这里记录的是我讲给儿子的故事，只是哄孩子而已，大人看了请别当真。  
-有一位叫闫彦之的小朋友，他可是会变身的哟。他最喜欢变身为大卡车。
+这里记录的是我讲给儿子的故事，只是哄孩子而已，大人看了请别当真。儿子有时候会帮我修改剧情，这是我们两个人的联合创作。  
+有一位叫闫彦之（我儿子的名字）的小朋友，自从看了孙悟空七十二变的动画片，就学会了变身术。只要他一说，“看我孙悟空七十二变，变变变”，他就会变身。闫彦之说他有七十九种变化，比孙悟空还多七种。  
+他最喜欢变身为大卡车。这个大卡车可以装很多东西，它可是可以装得下一座楼房的哟。它不但装得特别多，而且跑得特别快，具有光的速度。这个光就是闫晓光（我的名字）的光，就是阳光的光。光是世界上最快的速度，这个大卡车就像光一样快。从上海到威海，出发，嘟，到达。嘟的一声就到了。从上海到美国，出发，嘟嘟，到达，嘟嘟两声就到了。你说快不快？  
+
+快递
+喜马拉雅山 李大宝（闫彦之的一个好朋友）
+
+东方明珠 王大宝，王九斤 （闫彦之的一个好朋友） 月饼，巧克力馅
+
+发生战争，变身为战斗机，打落敌人的战机
+
+一份送给自己的快递，妈妈给买的水枪。背着水枪变身为消防车。
+
+灭火，云梯，消防车上自带的机器人，水管，
+
+高科西路浦三路发生交通事故，两车相撞，其中一个车翻了一个跟斗。车里的人受伤了，消防车，武欣怡开着救护车，道路救援车
+
+
