--- a/_posts/2016-09-04-story-01.markdown
+++ b/_posts/2016-09-04-story-01.markdown
@@ -4,14 +4,17 @@ title:  "讲给儿子的故事（一）"
 date:   2016-09-04 21:25:00 +0800
 categories: 故事
 ---
-这里记录的是我讲给儿子的故事，只是哄孩子而已，大人看了请别当真。儿子有时候会帮我修改剧情，这是我们两个人的联合创作。  
-有一位叫闫彦之（我儿子的名字）的小朋友，自从看了孙悟空七十二变的动画片，就学会了变身术。只要他一说，“看我孙悟空七十二变，变变变”，他就会变身。闫彦之说他有七十九种变化，比孙悟空还多七种。  
-他最喜欢变身为大卡车。这个大卡车可以装很多东西，它可是可以装得下一座楼房的哟。它不但装得特别多，而且跑得特别快，具有光的速度。这个光就是闫晓光（我的名字）的光，就是阳光的光。光是世界上最快的速度，这个大卡车就像光一样快。从上海到威海，出发，嘟，到达。嘟的一声就到了。从上海到美国，出发，嘟嘟，到达，嘟嘟两声就到了。你说快不快？  
+　　这里记录的是我讲给儿子的故事，只是哄孩子而已，大人看了请别当真。儿子有时候会帮我修改剧情，这是我们两个人的联合创作。
+  
+-------------------------------------------------------------------------------
+  
+　　有一位叫闫彦（我儿子的小名，他很喜欢故事的主人公叫他的名字）的小朋友，他是一名快递员。  
+　　自从他参观了《看小悟空七十二变》的展览，就学会了变身术。只要他一说，“看我孙悟空七十二变，变变变”，他就会变身。闫彦说他有七十九种变化，比孙悟空还多七种。  
+　　他最喜欢变身为大卡车。这个大卡车可以装很多东西，它可是可以装得下一座楼房的哟。它不但装得特别多，而且跑得特别快，具有光的速度。这个光就是闫晓光（我的名字）的光，就是阳光的光。光是世界上最快的速度，这个大卡车就像光一样快。从上海到威海，出发，嘟，到达。嘟的一声就到了。从上海到美国，出发，嘟嘟，到达，嘟嘟两声就到了。你说快不快？  
 
-快递
-喜马拉雅山 李大宝（闫彦之的一个好朋友）
+　　有一天，快递总部安排给他一个任务，要去喜马拉雅山送一份快递。（是不是想起了《超级飞侠》？）闫彦拿好包裹后，立马变身为大卡车。出发，嘟的一声，他就来到了山脚下。这时他放慢了速度，车内的导航自动开启，一小会儿的功夫，导航提示闫彦“目的地已到达”。（这几天儿子刚学会了“目的地”这个词，在我车上跟导航学的）车内的驾驶机器人走出来敲门，咚咚咚，咚咚咚，“有快递”。敲了几声后，没有人来开门，机器人大声喊，“快开门，快开门，再不开门我就用脚丫子踹门了。”（儿子这时笑得特别开心，不过我赶紧教育他，做为一个有礼貌的快递员是不能用脚丫子踹门的）。这时，门打开了，出来了一个小朋友，原来是李大宝（闫彦的一个好朋友）。“李大宝，李大宝，原来是你的快递呀”闫彦高兴的叫起来。不过李大宝可没有认出闫彦，因为他只看到了一个机器人和一辆大卡车。“看我孙悟空七十二变，变变变”机器人和大卡车一起变回了小朋友的样子。李大宝看到是闫彦在送快递，非常开心。闫彦顺利的完成了这次任务。  
 
-东方明珠 王大宝，王九斤 （闫彦之的一个好朋友） 月饼，巧克力馅
+东方明珠 王大宝，王九斤 （闫彦的一个好朋友） 月饼，巧克力馅
 
 发生战争，变身为战斗机，打落敌人的战机
 
