--- a/_posts/2016-09-04-story-01.markdown
+++ b/_posts/2016-09-04-story-01.markdown
@@ -14,7 +14,7 @@ categories: 故事
 
 　　有一天，快递总部安排给他一个任务，要去喜马拉雅山送一份快递。（是不是想起了《超级飞侠》？）闫彦拿好包裹后，立马变身为大卡车。出发，嘟的一声，他就来到了山脚下。这时他放慢了速度，车内的导航自动开启，一小会儿的功夫，导航提示闫彦“目的地已到达”。（这几天儿子刚学会了“目的地”这个词，在我车上跟导航学的）车内的驾驶机器人走出来敲门，咚咚咚，咚咚咚，“有快递”。敲了几声后，没有人来开门，机器人大声喊，“快开门，快开门，再不开门我就用脚丫子踹门了。”（儿子这时笑得特别开心，不过我赶紧教育他，做为一个有礼貌的快递员是不能用脚丫子踹门的）。这时，门打开了，出来了一个小朋友，原来是李大宝（闫彦的一个好朋友）。“李大宝，李大宝，原来是你的快递呀”闫彦高兴的叫起来。不过李大宝可没有认出闫彦，因为他只看到了一个机器人和一辆大卡车。“看我孙悟空七十二变，变变变”机器人和大卡车一起变回了小朋友的样子。李大宝看到是闫彦在送快递，非常开心。闫彦顺利的完成了这次任务。  
 
-东方明珠 王大宝，王九斤 （闫彦的一个好朋友） 月饼，巧克力馅
+有一天，闫彦接到一个新的任务，要去东方明珠广播电视塔送一份快递。 闫彦拿好包裹后，立马变身为大卡车。出发，嘟的一声，他就来到了东方明珠下面。这一次他先变成了小朋友的样子。他手里拿着快递，仰着头朝上看，东方明珠好高好高呀，上面有很多个圆球，有大的，有小的。闫彦数了数一共11个。然后呢，他先按照包裹上的电话号码给收件人打了电话，说让闫彦在旋转餐厅门口等他。闫彦坐着电梯，不到一分钟就来到了旋转餐厅。他看到有一个大厨站在门口，仔细一看，原来是王大宝、王九斤。（闫彦的一个好朋友）原来闫彦不知道王大宝的大名，以为是一个陌生人呢。王大宝说，“闫彦，我的包裹里装的是月饼，正好我们一起吃吧”。拆开包裹，是一个非常漂亮的盒子，打开盒子，是四个圆圆的月饼。他们两个你一个，我一个，就开始吃起来。闫彦咬了一口，好甜呀，原来是巧克力馅的。闫彦说“今天真是太高兴了，不但见到了王大宝，而且还吃了一个巧克力馅的月饼”。
 
 发生战争，变身为战斗机，打落敌人的战机
 
