--- a/_posts/2016-11-23-story-03.markdown
+++ b/_posts/2016-11-23-story-03.markdown
@@ -5,6 +5,6 @@ date:   2016-11-23 19:30:00 +0800
 categories: 小说
 ---
 他老婆有意无意经常翻翻他的手机，反是有记录的，通话、短信、微信、QQ、微博以及浏览器等，她都不放过。他喜欢这个游戏。  
-历经半年，他每天睡觉前在微信运动里给所有女生都点个赞。前不久，大学同学毕业十周年聚会，晚上聚餐时他对一位女同学说了一句话，“这半年，睡觉前总想起你，想你时就给你点个赞。”。这位女同学稍后悄悄递给他一张酒店房间门卡。那一夜，他赢得了游戏，输掉了人格。
+历经半年，他每天睡觉前在微信运动里给所有女生都点个赞。前不久，大学同学毕业十周年聚会，晚上聚餐时他对一位女同学说了一句话，“这半年，睡觉前总想起你，想你时就给你点个赞。”这位女同学稍后悄悄递给他一张酒店房间门卡。那一夜，他赢得了游戏，输掉了人格。
 
 
