--- a/_posts/2016-12-30-story-04.markdown
+++ b/_posts/2016-12-30-story-04.markdown
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: "七年之庠"
+title: "七年之痒"
 date:   2016-12-30 15:30:00 +0800
 categories: 小说
 ---
 ​
-他喜欢一个人发呆，呆呆的想事儿。他知道七年之庠是外遇的代名词。转眼间，他儿子已四岁，他们结婚已七年。天时、地利、人和，他认为时机已到。  
-他喜欢一个人发呆，呆呆的想事儿。他专门打印了一张玛丽莲·梦露主演的电影《七年之庠》的海报，张贴在书房里。当然，他不是为了提醒自己是时候外遇了，而是告诫自己今年是他们夫妻感情的一个转折点，一道坎。过了这道坎，他们的夫妻感情便能朝向良性健康的方向发展；反之，则可能二人分道扬镳、分崩离析，最终可能导致感情解体、劳燕分飞。  
+他喜欢一个人发呆，呆呆的想事儿。他知道七年之痒是外遇的代名词。转眼间，他儿子已四岁，他们结婚已七年。天时、地利、人和，他认为时机已到。  
+他喜欢一个人发呆，呆呆的想事儿。他专门打印了一张玛丽莲·梦露主演的电影《七年之痒》的海报，张贴在书房里。当然，他不是为了提醒自己是时候外遇了，而是告诫自己今年是他们夫妻感情的一个转折点，一道坎。过了这道坎，他们的夫妻感情便能朝向良性健康的方向发展；反之，则可能二人分道扬镳、分崩离析，最终可能导致感情解体、劳燕分飞。  
 他喜欢一个人发呆，呆呆的想事儿。他们夫妻两人的感情并不乐观，他心里清楚，她心里也清楚，他们双方父母、单位同事也清楚；唯独只有他儿子不清楚。因为他给儿子讲卡车故事时，总是这样开头，“阳阳是个小卡车，他的爸爸妈妈都是大卡车。阳阳负责运输零食、玩具，爸爸负责运输石头、沙子，妈妈负责运输水果、蔬菜，他们是幸福的卡车家庭。”  
 他喜欢一个人发呆，呆呆的想事儿。他想起在白百何主演的电影《失恋33天》中，有一个陈羽凡和马伊俐客串的分手片断，他觉着很经典。  
 陈羽凡：我觉得，我们俩好像出了点什么问题。  
@@ -18,5 +18,5 @@ categories: 小说
 他喜欢一个人发呆，呆呆的想事儿。结婚后，他们生活不和谐。他以大家喜闻乐见的啪啪啪为例，他把它比做闹钟。新婚时，是震动加声音两个状态，闹的久一点，会努力解锁各种体位，遗憾的是由于体力不支，并未解锁几个。慢慢的，和父母住在一起、有了孩子，双方都比较克制，基本是震动一个状态，闹钟随时有被按死的风险。再后来，他和他老婆都进化了，前戏的份量越来越重，闹钟稍震几下，双方心满意足，各自睡去。他觉着这是他们生活中最和谐的部分，这是他们为数不多的两个人一起做的事情。他们有不同的朋友圈，他们看不同的电影、电视剧，他们看不同的书，他们吃不同的零食，他们有不同的孩子教育理念，太多的不同，不同，不同……  
 他喜欢一个人发呆，呆呆的想事儿。他尝试着想象他们两个顺利度过这道坎，他们将会有一个幸福的家庭，至少在外人眼里是这样的。除此之外，他想象不出更多。因为列夫·托尔斯泰告诉我们“幸福的家庭都是相似的，不幸的家庭各有各的不幸。”  
 他喜欢一个人发呆，呆呆的想事儿。他在想象着他的外遇会是什么样的，总是这样想来想去，他不自觉的开始筹划起来。 慢慢的他感觉着他越来越喜欢公司里的一个女同事。刚开始他总是想跟这位女同事说上两句话，甭管有事没事。后来呢，他总是拿着手机，对着微信发呆，总有种想和她发个微信的冲动，他压抑着，只能把她的朋友圈翻了一遍又一遍，并且精心挑选了一张她的背影照片做为他的手机桌面。由于办公室里没有固定座位，他们两个时而坐得很近，时而坐得很远。离得近时，他心跳加速，六神无主；离得远时，他度日如年。他很想约她一起吃个饭，他很想约她一起看个电影，他很想和她一起过情人节，不，他很想和她过每一天；他很想碰一碰她的指尖，他很想轻吻她的唇，他很想把她拥入怀里，不，他向往着她的身体。  
-他喜欢一个人发呆，呆呆的想事儿。他儿子是他的庠庠挠儿，不过好像不止庠，也许都挠在了他老婆身上；也许是时候再加一把庠庠挠儿了，生个女儿也不错！  
+他喜欢一个人发呆，呆呆的想事儿。他儿子是他的痒痒挠儿，不过好像不止痒，也许都挠在了他老婆身上；也许是时候再加一把痒痒挠儿了，生个女儿也不错！  
 
