--- a/_posts/2016-12-30-story-04.markdown
+++ b/_posts/2016-12-30-story-04.markdown
@@ -5,10 +5,12 @@ date:   2016-12-30 15:30:00 +0800
 categories: 小说
 ---
 ​
-他喜欢一个人发呆，呆呆的想事儿。他知道七年之痒是外遇的代名词。转眼间，他儿子已四岁，他们结婚已七年。天时、地利、人和，他认为时机已到。  
+他喜欢一个人发呆，呆呆的想事儿。他知道七年之痒是外遇的代名词。转眼间，他儿子已四岁，他们结婚已七年。天时、地利、人和，他认为时机已到。
+![七年之痒](http://iamafool.net/images/story04_01.png)
 他喜欢一个人发呆，呆呆的想事儿。他专门打印了一张玛丽莲·梦露主演的电影《七年之痒》的海报，张贴在书房里。当然，他不是为了提醒自己是时候外遇了，而是告诫自己今年是他们夫妻感情的一个转折点，一道坎。过了这道坎，他们的夫妻感情便能朝向良性健康的方向发展；反之，则可能二人分道扬镳、分崩离析，最终可能导致感情解体、劳燕分飞。  
 他喜欢一个人发呆，呆呆的想事儿。他们夫妻两人的感情并不乐观，他心里清楚，她心里也清楚，他们双方父母、单位同事也清楚；唯独只有他儿子不清楚。因为他给儿子讲卡车故事时，总是这样开头，“阳阳是个小卡车，他的爸爸妈妈都是大卡车。阳阳负责运输零食、玩具，爸爸负责运输石头、沙子，妈妈负责运输水果、蔬菜，他们是幸福的卡车家庭。”  
 他喜欢一个人发呆，呆呆的想事儿。他想起在白百何主演的电影《失恋33天》中，有一个陈羽凡和马伊俐客串的分手片断，他觉着很经典。  
+![七年之痒](http://iamafool.net/images/story04_02.jpg)
 陈羽凡：我觉得，我们俩好像出了点什么问题。  
 马伊俐：我也隐隐有这种感觉。  
 陈羽凡：要不我们先分开一段时间？  
